--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,4 @@ project(playing_with_cpp VERSION 1.0)
 add_subdirectory(array_and_vector)
 add_subdirectory(char_and_strings)
 add_subdirectory(playlist)
+add_subdirectory(count_words)
