Add subdirectory student_score

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(array_and_vector)
 add_subdirectory(char_and_strings)
 add_subdirectory(playlist)
 add_subdirectory(count_words)
+add_subdirectory(student_score)
