Change naming style

--- a/playlist/CMakeLists.txt
+++ b/playlist/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(Playlist src/main.cpp src/Playlist.cpp)
+add_executable(Playlist src/main.cpp src/playlist.cpp)
 target_include_directories(Playlist PRIVATE include)
